Commited all files with contact.html

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,10 @@
 <head>
     <html>
+
         master branch modifcation
     
+        modified in feature1 branch
+
     </html>
     </head>
     
